# stock-api-manager

./: .gitignore  ApiSettings.json  BybitManager.pro  CMakeLists.txt  README.md  doxyconf
.github/workflows/: CodeAnalysis.yml  base.yml  build.yml
docs/: Bybit API.md  Libraries  MainDoc.txt  RoadMap.txt  Strategies  Threading.txt
docs/Arbitrage general idea/: link.txt
docs/Doxygen/html/: annotated.html  annotated_dup.js  apiSettings_8h_source.html  classApiSettings-members.html  classApiSettings.html  classHttpManager-members.html  classHttpManager.html  classLogger-members.html  classLogger.html  classLoggerWorker-members.html  classLoggerWorker.html  classMainWindow-members.html  classMainWindow.html  classNAM-members.html  classNAM.html  classOrderBook-members.html  classOrderBook.html  classWebSocketManager-members.html  classWebSocketManager.html  classes.html  classobAnalyzer-members.html  classobAnalyzer.html  defines_8h_source.html  dir_12816431ead8e71b1f2935eeed3c0155.html  dir_12816431ead8e71b1f2935eeed3c0155.js  dir_6752ee5280c1660461b4d22fcbee7a0c.html  dir_6752ee5280c1660461b4d22fcbee7a0c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7ecdf0f7f7b1cfe0c795aa6669bfa063.html  dir_7ecdf0f7f7b1cfe0c795aa6669bfa063.js  dir_8c2a76c3dc5b1cfc068db65a22466474.html  dir_8c2a76c3dc5b1cfc068db65a22466474.js  dir_8f16915a25eb1a6d92e26c0f63bea86f.html  dir_8f16915a25eb1a6d92e26c0f63bea86f.js  dir_a948bf76a50f97e6e68d57dfc4f03404.html  dir_a948bf76a50f97e6e68d57dfc4f03404.js  dir_bbd6674d859f4cefaacb708974cac240.html  dir_bbd6674d859f4cefaacb708974cac240.js  dir_bc8ac98828250fe80f37733af4da5fba.html  (+45 more)
docs/Doxygen/latex/: annotated.tex  apiSettings_8h_source.tex  classApiSettings.tex  classHttpManager.eps  classHttpManager.tex  classLogger.tex  classLoggerWorker.eps  classLoggerWorker.tex  classMainWindow.tex  classNAM.tex  classOrderBook.eps  classOrderBook.tex  classWebSocketManager.eps  classWebSocketManager.tex  classobAnalyzer.eps  classobAnalyzer.tex  defines_8h_source.tex  files.tex  hierarchy.tex  httpmanager_8h_source.tex  loggerTest_8h_source.tex  logger_8h_source.tex  loggerworker_8h_source.tex  mainwindow_8h_source.tex  nam_8h_source.tex  obanalyzer_8h_source.tex  orderbook_8h_source.tex  refman.tex  structBybitApi.tex  structHttpParameters.tex  structHttpsParameters.tex  structKeys.tex  structOrderBookData.tex  structOrderBookSide.tex  (+5 more)
docs/Git/: rmDirFromHistory.txt  rmFromHistory.txt
docs/Multiplatform/: multiplatform.txt
resources/: resources.qrc
scripts/python_prj/: test.py
src/: CMakeLists.txt  config.h.in  defines.h  main.cpp  tests.h
src/controllers/: CMakeLists.txt
src/controllers/Logger/: logger.cpp  logger.h
src/controllers/Settings/: apiSettings.cpp  apiSettings.h
src/controllers/Translator/: translator.h
src/dao/: CMakeLists.txt
src/dao/OrderBook/: orderbook.cpp  orderbook.h
src/libs/: CMakeLists.txt
src/models/: APISettings.cpp  APISettings.h  CMakeLists.txt  nam.h  networkSingleton.h  obanalyzer.cpp  obanalyzer.h
src/models/GetPostManager/: getpostmanager.cpp  getpostmanager.h
src/models/HttpManager/: httpmanager.cpp  httpmanager.h
src/models/WebSocketManager/: websocketmanager.cpp  websocketmanager.h
src/network/: CMakeLists.txt  nam.h
src/network/HttpManager/: httpmanager.cpp  httpmanager.h
src/network/WebSocketManager/: websocketmanager.cpp  websocketmanager.h
src/tests/: CMakeLists.txt  tests.h
src/tests/loggerTest/: loggerTest.h  loggerworker.cpp  loggerworker.h
src/ui/: CMakeLists.txt
src/ui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
(+9 files in other folders)
